--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -45,15 +45,15 @@ services:
       - traefik-public
       - default
 
-  db:
-    restart: "no"
-    ports:
-      - "5432:5432"
+  # db:
+  #   restart: "no"
+  #   ports:
+  #     - "5432:5432"
 
-  adminer:
-    restart: "no"
-    ports:
-      - "8080:8080"
+  # adminer:
+  #   restart: "no"
+  #   ports:
+  #     - "8080:8080"
 
   backend:
     restart: "no"
